--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "530390cf",
    "metadata": {},
    "outputs": [],
@@ -53,11 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ffe1047e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,11 +71,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f396b717",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.22.3\n",
+      "blas_info:\n",
+      "    libraries = ['cblas', 'blas', 'cblas', 'blas']\n",
+      "    library_dirs = ['/Users/zhengbochao/opt/anaconda3/envs/NGML/lib']\n",
+      "    include_dirs = ['/Users/zhengbochao/opt/anaconda3/envs/NGML/include']\n",
+      "    language = c\n",
+      "    define_macros = [('HAVE_CBLAS', None)]\n",
+      "blas_opt_info:\n",
+      "    define_macros = [('NO_ATLAS_INFO', 1), ('HAVE_CBLAS', None)]\n",
+      "    libraries = ['cblas', 'blas', 'cblas', 'blas']\n",
+      "    library_dirs = ['/Users/zhengbochao/opt/anaconda3/envs/NGML/lib']\n",
+      "    include_dirs = ['/Users/zhengbochao/opt/anaconda3/envs/NGML/include']\n",
+      "    language = c\n",
+      "lapack_info:\n",
+      "    libraries = ['lapack', 'blas', 'lapack', 'blas']\n",
+      "    library_dirs = ['/Users/zhengbochao/opt/anaconda3/envs/NGML/lib']\n",
+      "    language = f77\n",
+      "lapack_opt_info:\n",
+      "    libraries = ['lapack', 'blas', 'lapack', 'blas', 'cblas', 'blas', 'cblas', 'blas']\n",
+      "    library_dirs = ['/Users/zhengbochao/opt/anaconda3/envs/NGML/lib']\n",
+      "    language = c\n",
+      "    define_macros = [('NO_ATLAS_INFO', 1), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['/Users/zhengbochao/opt/anaconda3/envs/NGML/include']\n",
+      "Supported SIMD extensions in this NumPy install:\n",
+      "    baseline = SSE,SSE2,SSE3\n",
+      "    found = SSSE3,SSE41,POPCNT,SSE42\n",
+      "    not found = AVX,F16C,FMA3,AVX2,AVX512F,AVX512CD,AVX512_KNL,AVX512_SKX,AVX512_CLX,AVX512_CNL,AVX512_ICL\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.__version__)\n",
+    "np.show_config()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,11 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "31c9f6a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.zeros((10,10))\n",
+      "print(\"%d bytes\" % (Z.size * Z.itemsize))\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.zeros(10)\n",
+    "answer(4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,11 +152,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "31e8ec2e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.zeros((10,10))\n",
+    "print(Z)\n",
+    "# Z.size"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,11 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "593cd80f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "%run `python -c \"import numpy; numpy.info(numpy.add)\"`\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.add?\n",
+    "answer(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,11 +216,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "2edf3c42",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
+      "Z = np.zeros(10)\n",
+      "Z[4] = 1\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.zeros(10)\n",
+    "Z[4] = 1\n",
+    "print(Z)\n",
+    "answer(6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,11 +248,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "d8b86640",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.arange(10,50)\n",
+      "print(Z)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
+       "       27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,\n",
+       "       44, 45, 46, 47, 48, 49])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(range(10,50))\n",
+    "answer(7)\n",
+    "np.arange(10,50)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,11 +289,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "ec044bb5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.arange(50)\n",
+      "Z = Z[::-1]\n",
+      "print(Z)\n",
+      "[49 48 47 46 45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 29 28 27 26\n",
+      " 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10  9  8  7  6  5  4  3  2\n",
+      "  1  0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer(8)\n",
+    "Z = np.arange(50)\n",
+    "Z = np.flip(Z)\n",
+    "print(Z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,11 +323,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "d9e39043",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.arange(9).reshape(3, 3)\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.arange(9).reshape((3,3))\n",
+    "answer(9)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,11 +351,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "b2f3c90a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0, 1, 4]),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.array([1,2,0,0,4,0])\n",
+    "Y = np.nonzero(X)\n",
+    "print(Y)\n",
+    "# answer(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,11 +380,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "5b607b5c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,11 +411,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "ab21ed50",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.65247423, 0.63358338, 0.87465969],\n",
+       "        [0.53473034, 0.16348565, 0.60053826],\n",
+       "        [0.75158788, 0.67158955, 0.66545321]],\n",
+       "\n",
+       "       [[0.06462331, 0.10877028, 0.4653216 ],\n",
+       "        [0.6069177 , 0.72641751, 0.25857248],\n",
+       "        [0.09907226, 0.28007006, 0.14355667]],\n",
+       "\n",
+       "       [[0.30904496, 0.80777282, 0.02687882],\n",
+       "        [0.15014796, 0.1371482 , 0.25696867],\n",
+       "        [0.12356903, 0.77526689, 0.18460225]]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random((3,3,3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,11 +452,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "c0066de5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.80639999 0.45435505 0.94324933 0.84190505 0.89521422 0.02351133\n",
+      "  0.56232302 0.65951607 0.79651393 0.2036472 ]\n",
+      " [0.72191402 0.98222186 0.35134428 0.70480919 0.42487213 0.85772971\n",
+      "  0.05601232 0.75854669 0.63650801 0.70026676]\n",
+      " [0.24012585 0.97705398 0.37380726 0.8986047  0.85340431 0.54053882\n",
+      "  0.45957794 0.87429425 0.63897612 0.43130465]\n",
+      " [0.19075891 0.40844467 0.00800104 0.53319401 0.34958253 0.5012818\n",
+      "  0.66267668 0.85739124 0.26307068 0.48402006]\n",
+      " [0.34598548 0.85646516 0.63163575 0.3612787  0.59661939 0.28440198\n",
+      "  0.46185981 0.90880338 0.38526181 0.30881182]\n",
+      " [0.50688747 0.64445815 0.7225703  0.05984055 0.8648684  0.05780305\n",
+      "  0.69366549 0.55835926 0.71348392 0.80565526]\n",
+      " [0.32755349 0.61589447 0.87650689 0.30642939 0.97543938 0.00853835\n",
+      "  0.40510627 0.00527672 0.13782161 0.62677434]\n",
+      " [0.71396738 0.265069   0.96122887 0.26787634 0.97658499 0.91777419\n",
+      "  0.06794896 0.87563809 0.06448117 0.21641995]\n",
+      " [0.43203443 0.23605047 0.89977585 0.64751686 0.35224023 0.77003575\n",
+      "  0.75261463 0.0281966  0.61702627 0.38380705]\n",
+      " [0.34853883 0.96690445 0.54980958 0.38000019 0.10852851 0.55066393\n",
+      "  0.7126235  0.60041996 0.69548402 0.02392932]]\n",
+      "0.005276717177625345\n",
+      "0.9822218606246459\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.random.random([10,10])\n",
+    "print(X)\n",
+    "print(X.min())\n",
+    "print(X.max())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,11 +502,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "9672d023",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.80649654 0.12680281 0.86239813 0.93973446 0.07589917 0.87069648\n",
+      " 0.91898516 0.2922102  0.93788407 0.16099055 0.97794792 0.19694205\n",
+      " 0.10882392 0.96773327 0.34875891 0.80440646 0.02117714 0.23704007\n",
+      " 0.51820578 0.01309255 0.22008344 0.70516421 0.23343938 0.33920635\n",
+      " 0.51245138 0.41417927 0.68903198 0.32667372 0.59824227 0.63501368]\n",
+      "0.4953237100026288\n",
+      "Z = np.random.random(30)\n",
+      "m = Z.mean()\n",
+      "print(m)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.random.random(30)\n",
+    "print(X)\n",
+    "print(X.mean())\n",
+    "answer(14)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,11 +539,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "a55b6666",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.ones((10,10))\n",
+      "Z[1:-1,1:-1] = 0\n",
+      "print(Z)\n",
+      "[[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# X = np.zeros([10,10])\n",
+    "# X[0,] = 1\n",
+    "# X[9,] = 1\n",
+    "# X[:,0] = 1\n",
+    "# X[:,9] = 1\n",
+    "# print(X)\n",
+    "answer(15)\n",
+    "Y = np.ones([10,10])\n",
+    "Y[1:-1,1:-1] = 0\n",
+    "print(Y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -293,11 +586,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "b2df3a8a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# X = np.arange(25).reshape([5,5])\n",
+    "# print(X)\n",
+    "# answer(16)\n",
+    "# X = np.arange(25).reshape([5,5])\n",
+    "# X = np.pad(X, pad_width=1, mode='constant', constant_values=0)\n",
+    "# print(X)\n",
+    "Z = np.ones((5,5))\n",
+    "Z[:, [0, -1]] = 0\n",
+    "Z[[0, -1], :] = 0\n",
+    "print(Z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -317,11 +633,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "109cf327",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "False\n",
+      "False\n",
+      "nan\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0 * np.nan)\n",
+    "print(np.nan == np.nan)\n",
+    "print(np.inf > np.nan)\n",
+    "print(np.nan - np.nan)\n",
+    "print(np.nan in set([np.nan]))\n",
+    "print(0.3 == 3 * 0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -333,11 +669,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "f2e6cfa6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.diag(1+np.arange(4),k=-1)\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a = np.arange(1,5)\n",
+    "# X = np.diag(a,-1)\n",
+    "# print(X)\n",
+    "answer(18)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,11 +699,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "cabdf298",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.zeros((8,8),dtype=int)\n",
+      "Z[1::2,::2] = 1\n",
+      "Z[::2,1::2] = 1\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hint(19)\n",
+    "# X = np.zeros([8,8])\n",
+    "# X[::2,::2] = 1\n",
+    "# X[1::2,1::2] = 1\n",
+    "# print(X)\n",
+    "answer(19)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -365,11 +733,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "id": "de8b0245",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 5, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# X = np.arange(6*7*8).reshape((6,7,8))\n",
+    "# # print(X)\n",
+    "# X = X.reshape(-1)\n",
+    "# print(X[100])\n",
+    "# hint(20)\n",
+    "# X = np.arange(6*7*8).reshape((6,7,8))\n",
+    "# print(unravel_index)\n",
+    "# answer(20)\n",
+    "print(np.unravel_index(99, (6,7,8)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1680,7 +2066,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
