finish all simple question

--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "530390cf",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ffe1047e",
    "metadata": {},
    "outputs": [],
@@ -767,11 +767,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6da26fd3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]]\n",
+      "Z = np.tile( np.array([[0,1],[1,0]]), (4,4))\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.array([[0,1],\n",
+    "              [1,0]])\n",
+    "# print(X)\n",
+    "Y = np.tile(X, [4,4])\n",
+    "print(Y)\n",
+    "answer(21)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -783,11 +807,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ee6ced60",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.random.random((5,5))\n",
+      "Z = (Z - np.mean (Z)) / (np.std (Z))\n",
+      "print(Z)\n",
+      "[[0.47876847 0.98530506 0.12913368 0.4679931  0.8562171 ]\n",
+      " [0.98545934 0.00560288 0.56035402 0.80046925 0.6666227 ]\n",
+      " [0.36974548 0.76694761 0.54779537 0.26958006 0.89973367]\n",
+      " [0.95050672 0.56926221 0.37726525 0.07492708 0.79789875]\n",
+      " [0.97393232 0.83914907 0.85014697 0.74003392 0.41680021]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.arange(25).reshape([5,5])\n",
+    "Xmax = X.max()\n",
+    "Xmin = X.min()\n",
+    "Xmean = X.mean()\n",
+    "X = (X - Xmean)/(Xmax - Xmin)\n",
+    "# print(X)\n",
+    "answer(22)\n",
+    "Z = np.random.random((5,5))\n",
+    "# Z = (Z - np.mean (Z)) / (np.std (Z))\n",
+    "print(Z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -799,11 +849,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "e2f9cfc6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color = np.dtype([(\"r\", np.ubyte),\n",
+      "                  (\"g\", np.ubyte),\n",
+      "                  (\"b\", np.ubyte),\n",
+      "                  (\"a\", np.ubyte)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer(23)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -815,11 +878,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9fc0d553",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.38529609 0.69497988]\n",
+      " [0.21137741 0.57061329]\n",
+      " [0.23410963 0.30354766]\n",
+      " [0.21214686 0.7454254 ]\n",
+      " [0.30812283 0.98142912]]\n",
+      "Z = np.dot(np.ones((5,3)), np.ones((3,2)))\n",
+      "print(Z)\n",
+      "\n",
+      "# Alternative solution, in Python 3.5 and above\n",
+      "Z = np.ones((5,3)) @ np.ones((3,2))\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.random.random([5,3])\n",
+    "Y = np.random.random([3,2])\n",
+    "Z = X@Y\n",
+    "print(Z)\n",
+    "answer(24)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -831,11 +918,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "0e25eca7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5.6066359   1.30174675 -6.717622   -3.25527472  8.09879212  1.61798371\n",
+      "  0.19442218 -4.844757   -7.90765189 -6.83877555]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = 10*np.random.random(10)\n",
+    "X[(X>3) & (X<8)] *= -1\n",
+    "print(X)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -854,11 +954,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "f02eedba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(range(5),-1))\n",
+    "from numpy import *\n",
+    "print(sum(range(5),-1))\n",
+    "import builtins\n",
+    "print(builtins.sum(range(5),-1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -878,11 +994,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "86d6cbef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m Z \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;241m5\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m Z\u001b[38;5;241m<\u001b[39mZ\u001b[38;5;241m>\u001b[39mZ\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.arange(5)\n",
+    "Z<Z>Z"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -899,11 +1030,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "93684068",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-9.22337204e+18])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([np.nan]).astype(int).astype(float)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -915,11 +1059,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "61fbb78e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.72922507 -6.38310723 -3.65313038  1.44789437 -3.29910949]\n",
+      "[-2. -7. -4.  2. -4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# answer(29)\n",
+    "X = np.random.uniform(-10,10,5)\n",
+    "print(X)\n",
+    "X = np.where(X>0,np.ceil(X),np.floor(X))\n",
+    "print(X)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -931,11 +1090,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "54399cbe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hint: np.intersect1d\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hint(30)\n",
+    "np.intersect1d(np.arange(2,8), np.arange(4,10))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -947,11 +1127,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "2ca3289c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Suicide mode on\n",
+      "defaults = np.seterr(all=\"ignore\")\n",
+      "Z = np.ones(1) / 0\n",
+      "\n",
+      "# Back to sanity\n",
+      "_ = np.seterr(**defaults)\n",
+      "\n",
+      "# Equivalently with a context manager\n",
+      "with np.errstate(all=\"ignore\"):\n",
+      "    np.arange(3) / 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer(31)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -966,11 +1165,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "5c83ffce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1j"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.emath.sqrt(-1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -982,11 +1194,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "c3b683a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-05-07\n",
+      "2022-05-06\n",
+      "2022-05-08\n"
+     ]
+    }
+   ],
+   "source": [
+    "today = np.datetime64('today')\n",
+    "print(today)\n",
+    "yesterday = np.datetime64('today') - np.timedelta64(1)\n",
+    "print(yesterday)\n",
+    "tomorror = np.datetime64('today') + np.timedelta64(1)\n",
+    "print(tomorror)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1062,11 +1291,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "aab193a6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "def generate():\n",
+      "    for x in range(10):\n",
+      "        yield x\n",
+      "Z = np.fromiter(generate(),dtype=float,count=-1)\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer(38)"
+   ]
   },
   {
    "cell_type": "markdown",
